--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         <activity android:name=".MainActivity"
             android:windowSoftInputMode="adjustPan">
         </activity>
+        <activity android:name=".InfoFragment.InfoSub"/>
         <activity android:name=".PersonFragment.PersonMedDialog"/>
     </application>
 
