--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,5 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.android.material:material:1.2.0-alpha03'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    compile 'com.github.franmontiel:FullScreenDialog:1.0.1'
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
 }
